<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/group1">

        <item android:id="@+id/nav_home" android:title="@string/home"></item>
        <item android:id="@+id/ssa" android:title="@string/boy_s_pg"></item>
        <item android:id="@+id/jja" android:title="@string/girl_s_pg"></item>
        <item android:id="@+id/cca" android:title="@string/flat"></item>
        <item android:id="@+id/jjl" android:title="@string/hotel"></item>
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group2">
        <item android:id="@+id/nav_settings" android:title="@string/settings"></item>
        <item android:id="@+id/nav_aboutus" android:title="@string/about_us"></item>
        <item android:id="@+id/nav_signOut" android:title="@string/sign_out"></item>

    </group>
</menu>