<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/onesixty"
        android:background="@drawable/bg_login"/>
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stay_here"
        android:textColor="@color/logoOne"
        android:fontFamily="cursive"
        android:textSize="@dimen/thirtysp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/fifty"/>
    <ImageView
        android:layout_width="@dimen/eighty"
        android:layout_height="@dimen/eighty"
        android:layout_marginTop="@dimen/twentyfour"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/homelogo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/thirty"
        android:layout_marginTop="@dimen/twenty"
        android:layout_marginRight="@dimen/thirty"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fourty"
            android:drawableLeft="@drawable/ic_username"
            android:background="@drawable/edit_text"
            android:hint="@string/username"
            android:elevation="@dimen/five"
            android:paddingLeft="@dimen/ten"
            android:layout_marginTop="@dimen/ten"
            android:textColorHint="@color/colorhint"/>
        <EditText
            android:id="@+id/password"
            android:paddingLeft="@dimen/ten"
            android:drawableLeft="@drawable/security"
            android:layout_marginTop="@dimen/twenty"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fourty"
            android:hint="@string/password"
            android:background="@drawable/edit_text"
            android:drawablePadding="@dimen/five"
            android:inputType="textPassword"
            android:textColorHint="@color/colorhint"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/five"
            android:layout_marginTop="@dimen/twenty"
            android:text="@string/login"
            android:onClick="loginToMainActivity"
            android:drawableLeft="@drawable/ic_signin"
            android:textColor="@color/white"
            android:background="@drawable/button_bg"
            android:textSize="@dimen/twenty"
            android:id="@+id/singingIn"
            android:padding="@dimen/ten"
            android:fontFamily="sans-serif-condensed"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty"
            android:text="@string/sign_up"
            android:textColor="@color/newpink"
            android:background="@drawable/sign_up"
            android:textSize="@dimen/twenty"
            android:fontFamily="sans-serif-condensed"/>
    </LinearLayout>
</LinearLayout>
</RelativeLayout>